scaffolded base styles and promo bar

--- a/cms/templates/_partials/components/navbar.twig
+++ b/cms/templates/_partials/components/navbar.twig
@@ -1,7 +1,7 @@
 {# @var craft \craft\web\twig\variables\CraftVariable #}
 {% cache globally unless cacheExempt %}
 <div class="main-nav--section">
-	<div class="container container--large">
+	<div class="container">
 		<nav class="main-nav">
 			<div class="nav-logo">
 				{% include "_partials/snippets/logo" with {'size': 'compact' } %}
