--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -2,4 +2,4 @@
 * Font Imports - used to import google fonts or set up @font-face declarations for custom fonts
 ********************************************************************************************************/
 
-@import url('https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@700;800&family=Open+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Over+the+Rainbow&display=swap');
