--- a/cms/templates/_partials/components/navbar.twig
+++ b/cms/templates/_partials/components/navbar.twig
@@ -3,11 +3,13 @@
 <div class="main-nav--section">
 	<div class="container">
 		<nav class="main-nav">
-			<div class="nav-logo">
-				{% include "_partials/snippets/logo" with {'size': 'compact' } %}
-			</div>
 			<div class="nav-links">
-				{% include '_partials/components/main-navigation' %}
+				{% include '_partials/components/main-navigation' with {'type': 'first-half'} %}
+				<div class="nav-logo">
+					{% include "_partials/snippets/logo" with {'size': 'compact' } %}
+				</div>
+				{% include '_partials/components/main-navigation' with {'type': 'second-half'} %}
+				
 				<div class="mobile-navigation-trigger-container">
 					<a class="mobile-navigation-trigger" href="#" aria-label="Open navigation menu">
 						<span data-feather="menu"></span>
