--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -311,7 +311,7 @@ header.site-header {
 header.site-header {
   
   .main-nav--section {
-    border-bottom: 1px solid #F0F0F0;
+    border-bottom: none;
     
     nav.main-nav {
       display: flex;
@@ -319,28 +319,38 @@ header.site-header {
       justify-content: space-between;
 
       .nav-logo {
-        padding: 1.5rem 0;
+        padding: 0.35rem 0;
+        margin-left: 1rem;
+        margin-right: 1rem;
+
         img, svg {
-          height: rem-calc(50px);
+          height: rem-calc(80px);
         }
 
         @include breakpoint(medium down) {
-          padding: 0.75rem 0;
+          padding: 0.35rem 0;
+          margin-left: 0;
+          margin-right: 0;
 
           img, svg {
-            height: rem-calc(35px);
+            height: rem-calc(60px);
           }
         }
       }
 
       .nav-links {
         display: flex;
+        flex: 1;
+        align-items: center;
+        justify-content: center;
 
         .mobile-navigation-trigger-container {
           display: none;
         }
 
         @include breakpoint(medium down) {
+          justify-content: space-between;
+
           .mobile-navigation-trigger-container {
             display: flex;
           }
@@ -374,12 +384,16 @@ header.site-header {
     a {
       display: block;
       color: $heading-text-color;
-      padding: 1rem 0.5rem;
+      padding: 1rem 0.75rem;
       transition: color 300ms ease;
+      text-transform: uppercase;
+      font-size: rem-calc(17px);
+      font-weight: 600;
+      letter-spacing: 0.05em;
     }
 
     &:hover > a {
-      color: $primary-accent;
+      color: $tertiary-accent;
     }
 
     .icon {
