added hero content block

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -11,6 +11,9 @@
             'contentBuilder.text',
             'contentBuilder.image',
             'contentBuilder.image:image',
+            'contentBuilder.hero',
+            'contentBuilder.hero:image',
+            'contentBuilder.hero:children',
         ]
     ) %}
 
