--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -11,7 +11,7 @@ body, html {
   background: #FFFFFF;
   color: $body-copy-color;
 
-  .section--dark h1, .section--dark h2, .section--dark h3, .section--dark h4, .section--dark h5, .section--dark h6 {
+  .section--dark h1, .section--dark h2, .section--dark h3, .section--dark h4, .section--dark h5, .section--dark h6, .section--dark .subtitle--heading {
     color: #FFFFFF;
   }
 
