--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -88,6 +88,20 @@
   }
 }
 
+.subtitle--heading {
+  font-family: $accent-copy-font;
+  font-style: normal;
+  font-weight: normal;
+  letter-spacing: 0;
+  line-height: 1.3;
+  color: $tertiary-accent;
+  font-size: rem-calc(26);
+
+  @include breakpoint(medium up) {
+    font-size: rem-calc(32);
+  }
+}
+
 .inline--heading {
   font-family: $heading-copy-font;
   font-style: normal;
@@ -739,6 +753,51 @@ footer.site-footer {
 /******************** Component Styles ********************/
 
 /******************** Block Styles ********************/
+
+.section-hero--block {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  height: 75vh;
+  min-height: 25rem;
+  max-height: 45rem;
+  background: #000000;
+  z-index: 1;
+  overflow: hidden;
+
+  .background-container {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.75;
+  }
+
+  .content-container {
+    text-align: center;
+
+    .page--heading, .subtitle--heading {
+      margin-bottom: 0.4rem;
+    }
+    
+    .subtitle--heading {
+      @include breakpoint(medium up) {
+        font-size: rem-calc(40px);
+      }
+    }
+    
+    .buttons {
+      align-items: center;
+      justify-content: center;
+      margin-top: 1.6rem;
+    }
+  }
+}
 
 .section-image--block {
   .image-container img {
