--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -9,6 +9,7 @@
         [
             'contentBuilder',
             'contentBuilder.text',
+            'contentBuilder.text:children',
             'contentBuilder.image',
             'contentBuilder.image:image',
             'contentBuilder.hero',
