--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -68,7 +68,7 @@
   font-size: rem-calc(35);
 
   @include breakpoint(medium up) {
-    font-size: rem-calc(70);
+    font-size: rem-calc(65);
   }
 }
 
@@ -81,10 +81,10 @@
   color: $heading-copy-color;
   line-height: $header-lineheight;
   margin-bottom: 1.6rem;
-  font-size: rem-calc(30);
+  font-size: rem-calc(35);
 
   @include breakpoint(medium up) {
-    font-size: rem-calc(50);
+    font-size: rem-calc(65);
   }
 }
 
@@ -95,10 +95,11 @@
   letter-spacing: 0;
   line-height: 1.3;
   color: $tertiary-accent;
-  font-size: rem-calc(26);
+  font-size: rem-calc(25);
+  margin-bottom: 0.6rem;
 
   @include breakpoint(medium up) {
-    font-size: rem-calc(32);
+    font-size: rem-calc(30);
   }
 }
 
@@ -397,7 +398,7 @@ header.site-header {
 
     a {
       display: block;
-      color: $heading-text-color;
+      color: #1C2436;
       padding: 1rem 0.75rem;
       transition: color 300ms ease;
       text-transform: uppercase;
@@ -612,7 +613,7 @@ header.site-header {
           display: block;
           padding: 0.65rem;
           font-size: rem-calc(20px);
-          color: #000;
+          color: #1C2436;
           text-transform: uppercase;
           transition: color 200ms ease;
         }
@@ -656,7 +657,7 @@ header.site-header {
             a {
               font-size: rem-calc(18px);
               text-transform: none;
-              color: rgba(#000, 0.9);
+              color: rgba(#1C2436, 0.9);
             }
           }
 
@@ -681,7 +682,7 @@ header.site-header {
           padding-bottom: 1rem;
 
           a {
-            color: rgba(#000, 0.9);
+            color: rgba(#1C2436, 0.9);
           }
         }
 
