--- a/cms/templates/_partials/blocks/text.twig
+++ b/cms/templates/_partials/blocks/text.twig
@@ -5,9 +5,10 @@
 {% set heading = block['heading'] is defined ? block.heading : '' %}
 {% set subheading = block['subheading'] is defined ? block.subheading : '' %}
 {% set rtfContent = block['rtfContent'] is defined ? block.rtfContent : '' %}
+{% set sectionType = block['sectionType'] is defined ? block.sectionType : 'standard' %}
 {% set buttons = block.children is defined ? block.children|filter(item => item.type.handle == 'button') : null %}
 
-<section class="section section--medium section--whitespace section-{{ block_type }}--block animatable">
+<section class="section section--medium section--whitespace section-{{ block_type }}--block section--{{ sectionType }} animatable">
     <div class="container">
         <div class="grid-x grid-margin-x align-center">
             <div class="cell medium-10">
