--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -15,6 +15,8 @@
             'contentBuilder.hero',
             'contentBuilder.hero:image',
             'contentBuilder.hero:children',
+            'contentBuilder.text_cta',
+            'contentBuilder.text_cta:children',
         ]
     ) %}
 
