added logo_list content block

--- a/cms/templates/_macros/lazyImager.twig
+++ b/cms/templates/_macros/lazyImager.twig
@@ -65,7 +65,7 @@ https://github.com/inuitcss/inuitcss/blob/develop/objects/_objects.ratio.scss
         mode: 'crop',
         quality: 80,
         ratio: false, 
-        wrapImage: true,
+        wrapImage: false,
         wrapClass: 'image-container',
         cover: false,
     } %}
