--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -17,6 +17,8 @@
             'contentBuilder.hero:children',
             'contentBuilder.text_cta',
             'contentBuilder.text_cta:children',
+            'contentBuilder.logo_list',
+            'contentBuilder.logo_list:children',
         ]
     ) %}
 
