added image_text_slider content block

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -22,6 +22,8 @@
             'contentBuilder.image_text_banner',
             'contentBuilder.image_text_banner:image',
             'contentBuilder.image_text_banner:children',
+            'contentBuilder.image_text_slider',
+            'contentBuilder.image_text_slider:children',
         ]
     ) %}
 
