added hero_subpage content block

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -8,13 +8,15 @@
         [entry],
         [
             'contentBuilder',
+            'contentBuilder.hero',
+            'contentBuilder.hero:image',
+            'contentBuilder.hero:children',
+            'contentBuilder.hero_subpage',
+            'contentBuilder.hero_subpage:children',
             'contentBuilder.text',
             'contentBuilder.text:children',
             'contentBuilder.image',
             'contentBuilder.image:image',
-            'contentBuilder.hero',
-            'contentBuilder.hero:image',
-            'contentBuilder.hero:children',
             'contentBuilder.text_cta',
             'contentBuilder.text_cta:children',
             'contentBuilder.logo_list',
