added image_text content block

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -21,6 +21,9 @@
             'contentBuilder.text_cta:children',
             'contentBuilder.logo_list',
             'contentBuilder.logo_list:children',
+            'contentBuilder.image_text',
+            'contentBuilder.image_text:image',
+            'contentBuilder.image_text:children',
             'contentBuilder.image_text_banner',
             'contentBuilder.image_text_banner:image',
             'contentBuilder.image_text_banner:children',
