--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -142,6 +142,12 @@
   }
 }
 
+.rte {
+  h3 {
+    @extend .inline--heading;
+  }
+}
+
 /******************** Form Styles ********************/
 
 form {
@@ -880,6 +886,36 @@ footer.site-footer {
   }
 }
 
+// Image/Text content block
+.section-image_text--block {
+  .image-container {
+    margin-bottom: 2rem;
+  }
+
+  .content-container .buttons {
+    margin-top: 1.4rem;
+  }
+
+  @include breakpoint(large up) {
+    .image-container {
+      margin-bottom: 0;
+    }
+
+    .content-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+      padding-left: 5%;
+
+      .content p:last-of-type {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
 // Image/Text Banner content block
 .section-image_text_banner--block {
   .text-container {
@@ -1184,7 +1220,7 @@ ul.social-links {
     position: relative;
     background: transparent;
     color: $tertiary-accent;
-    padding: 0 5px;
+    padding: 0;
     border-width: 0;
     text-transform: uppercase;
     transition: color 200ms ease, opacity 200ms ease;
