--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -30,6 +30,9 @@
             'contentBuilder.image_stats_banner',
             'contentBuilder.image_stats_banner:image',
             'contentBuilder.image_stats_banner:children',
+            'contentBuilder.image_text_stats_banner',
+            'contentBuilder.image_text_stats_banner:image',
+            'contentBuilder.image_text_stats_banner:children',
             'contentBuilder.image_text_slider',
             'contentBuilder.image_text_slider:children',
         ]
