--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1066,6 +1066,98 @@ footer.site-footer {
   }
 }
 
+// Image/Text/Stats Banner content block
+.section-image_text_stats_banner--block {
+  .text-container {
+    @extend .section.section--medium;
+  }
+
+  &.section--dark .text-container .subtitle--heading {
+    color: #B9DFF5;
+  }
+
+  &.section--dark.section--alternate .text-container .subtitle--heading {
+    color: #FFFFFF;
+  }
+
+  .statistics--container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0.5rem;
+
+    .statistic-item {
+      text-align: center;
+      margin-bottom: 0.75rem;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+      .statistic {
+        position: relative;
+        display: inline-block;
+        padding: 0.5rem 1rem;
+        margin: 0.5rem;
+        margin-left: 0;
+
+        color: #6CC9FF;
+        font-family: $heading-copy-font;
+        font-size: rem-calc(40px);
+        line-height: 1;
+
+        &.highlighted {
+          color: #FFFFFF;
+          background-color: $tertiary-accent;
+          border-radius: 15px;
+        }
+      }
+
+      .description {
+        flex: 1;
+        font-size: rem-calc(18px);
+        font-weight: 600;
+        text-transform: uppercase;
+        text-align: left;
+        
+        p:last-of-type {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+
+  @include breakpoint(large up) {
+    display: flex;
+    flex-direction: row;
+
+    &.section-alignment--reversed {
+      flex-direction: row-reverse;
+    }
+
+    .image-container {
+      flex: 1;
+      position: relative;
+      z-index: 1;
+
+      img {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .text-container {
+      flex: 1;
+
+      .text-content {
+        max-width: 26rem;
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
+  }
+}
+
 // Image/Text Slider content block
 .section-image_text_slider--block {
   display: flex;
