scaffolded team grid

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -35,6 +35,8 @@
             'contentBuilder.image_text_stats_banner:children',
             'contentBuilder.image_text_slider',
             'contentBuilder.image_text_slider:children',
+            'contentBuilder.team_grid',
+            'contentBuilder.team_grid:children',
         ]
     ) %}
 
