finished team_grid and added team_text_grid content blocks

--- a/cms/templates/_partials/components/content_builder.twig
+++ b/cms/templates/_partials/components/content_builder.twig
@@ -37,6 +37,8 @@
             'contentBuilder.image_text_slider:children',
             'contentBuilder.team_grid',
             'contentBuilder.team_grid:children',
+            'contentBuilder.team_text_grid',
+            'contentBuilder.team_text_grid:children',
         ]
     ) %}
 
