--- a/cms/templates/_partials/blocks/team_grid.twig
+++ b/cms/templates/_partials/blocks/team_grid.twig
@@ -41,18 +41,20 @@
             {% endif %}
 
             {% if image %}
-            <div class="team-item cell {% if showLargePortraits %}large-6{% else %}large-4{% endif %} medium-4 small-6">
+            <div class="team-item cell {% if showLargePortraits %}large-6{% else %}large-4{% endif %} medium-6 small-12">
                 <div class="image-container">
                   {{ LazyImager.LazyImager(image, imageOptions) }}
                 </div>
                 <div class="content-container">
-                    {% if name|length %}<h4 class="item-title">{{ name }}</h4>{% endif %}
-                    {% if title|length %}<p class="item-description">{{ title }}</p>{% endif %}
-                    {% if email|length %}
-                        <div class="item-link">
-                        <a href="mailto:{{ email | escape }}" target="_blank">{{ email | escape }}</a>
-                        </div>
-                    {% endif %}
+                    <div class="caption">
+                        {% if name|length %}<h4 class="item-title">{{ name }}</h4>{% endif %}
+                        {% if title|length %}<p class="item-description">{{ title }}</p>{% endif %}
+                        {% if email|length %}
+                            <div class="item-link">
+                            <a href="mailto:{{ email | escape }}" target="_blank">{{ email | escape }}</a>
+                            </div>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
             {% endif %}
