--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1314,6 +1314,114 @@ footer.site-footer {
   }
 }
 
+.section-team_grid--block {
+  .primary--heading, .accent--heading {
+    text-align: center;
+  }
+
+  .team-items {
+    margin-top: 4rem;
+
+    .team-item {
+      position: relative;
+      z-index: 1;
+      padding: 1.5rem;
+
+      margin-bottom: get($container-gutters, "standard.small"); 
+
+      @include breakpoint(medium up) {
+        margin-bottom: get($container-gutters, "standard.medium"); 
+      }
+
+      @include breakpoint(large up) {
+        margin-bottom: get($container-gutters, "standard.large"); 
+      }
+
+      .image-container {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+      }
+
+      .content-container {
+        position: relative;
+        padding-top: 100%;
+
+        .caption {
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          width: 100%;
+          color: #FFFFFF;
+          filter: drop-shadow(0px 0px 20px rgba(0, 0, 0, 0.75));
+
+          .item-title {
+            font-size: rem-calc(24px);
+            margin-bottom: 0.1rem;
+            color: #FFFFFF;
+          }
+
+          .item-description {
+            font-weight: 600;
+            margin-bottom: 0;
+          }
+
+          .item-link {
+            margin-top: .6rem;
+
+            a {
+              color: #FFFFFF;
+              opacity: 1;
+              transition: opacity 200ms ease, color 200ms ease;
+              font-size: rem-calc(18px);
+
+              &:hover, &:active {
+                opacity: 0.8;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.section-team_text_grid--block {
+  text-align: center;
+  color: $primary-accent;
+
+  .team-items {
+    margin-top: 4rem;
+
+    .team-item {
+      margin-bottom: get($container-gutters, "standard.small") + 0.5rem; 
+
+      @include breakpoint(medium up) {
+        margin-bottom: get($container-gutters, "standard.medium") + 0.5rem; 
+      }
+
+      @include breakpoint(large up) {
+        margin-bottom: get($container-gutters, "standard.large") + 0.5rem; 
+      }
+
+      .content-container {
+        .item-title {
+          font-size: rem-calc(22px);
+          font-weight: 800;
+          margin-bottom: 0;
+        }
+
+        .item-description {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+}
+
 /******************** Snippet Styles ********************/
 a.logo {
   position: relative;
